sync: update after migration fixes and funnel investigation

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,4 +1,4 @@
-project_id = "yioldpwkkgsdsukxfcnr"
+project_id = "mqaygpnfjuyslnxpvipa"
 
 # =====================================
 # HOTMART / FINANCE
