--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -91,3 +91,14 @@ verify_jwt = false
 [functions.export-operational-data]
 verify_jwt = false
 
+
+[functions.meta-save-accounts]
+enabled = true
+verify_jwt = true
+import_map = "./functions/meta-save-accounts/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/meta-save-accounts/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/meta-save-accounts/*.html" ]
