--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -94,7 +94,7 @@ verify_jwt = false
 
 [functions.meta-save-accounts]
 enabled = true
-verify_jwt = true
+verify_jwt = false
 import_map = "./functions/meta-save-accounts/deno.json"
 # Uncomment to specify a custom file path to the entrypoint.
 # Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
